--- a/src/style.css
+++ b/src/style.css
@@ -7,20 +7,23 @@
 body{
     display: flex;
     justify-content: center;
+    align-items: center;
 }
 
 img{
-    position: absolute;
+    /* position: absolute; */
     width: 1920px;
     height: 1080px;
     z-index: -1;
 }
 
 .weather{
-    height: 100vh;
-    width: 100vw;
+    top: 50px;
+    height: 90vh;
+    width: 80vw;
+    position: absolute;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: repeat(5, 1fr);
     grid-template-rows: 1fr 1fr;
     /* gap: 10px; */
     flex-direction: column;
@@ -30,50 +33,106 @@ img{
     border-radius: 40px;
 }
 
-.main{
+.today{
     grid-column: 1 / 3;
     grid-row: 0 / 1;
     background: wheat;
     margin: 20px;
-    display: flex;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
     gap: 20px;
 }
 
-.today-data{
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    width: 50%;
-}
-
-.today-temperature{
-    width: 100px;
-    height: 100px;
+.today__temperature{
+    grid-column: 1 / 3;
+    grid-row: 1 / 2;
+    /* width: 100%; */
+    height: 100%;
+    margin: 20px;
     background-color: red;
 }
 
-.today-city{
-    width: 100px;
-    height: 100px;
+.today__city{
+    grid-column: 2 / 3;
+    grid-row: 2 / 3;
+    /* width: 80%; */
+    /* height: 40%; */
+    margin: 20px;
     background-color: black
 }
 
-.today-image{
+.today__image{
+    grid-column: 1 / 2;
+    grid-row: 2 / 3;
     background-color: pink;
-    width: 50%;
+    /* width: 50%; */
+    margin: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.today__image > img{
+    width: 100px;
+    height: 100px;
+    z-index: 2;
+}
+
+
+.additional{
+    grid-column: 3 / 5;
+    grid-row: 0 / 1;
+    background: navy;
+    display: flex;
+    flex-direction: column;
+    margin: 20px;
+}
+
+.additional__feels-like{
+    width: 100%;
+    height: 33%;
+    background-color: red;
+}
+
+.additional__humidity{
+    width: 100%;
+    height: 33%;
+    background-color: black;
+}
+
+.additional__wind-speed{
+    width: 100%;
+    height: 33%;
+    background-color: blanchedalmond;
 }
 
 .search{
     display: flex;
-    grid-column: 3 / 4;
+    flex-direction: column;
+    grid-column: 5 / 6;
     grid-row: 0 / 1;
     margin: 20px;
     background-color: navajowhite;
 }
 
+.search > p{
+    height: 33%;
+}
+
+.search > input{
+    height: 33%;
+}
+
+.toggle-temp{
+    width: 100%;
+    height: 100%;
+    background-color: violet;
+}
+
 .forecast{
     background: white;
-    grid-column: 1 / 4;
+    grid-column: 1 / 6;
     grid-row: 2 / 3;
     margin: 20px;
     display: flex;
@@ -85,27 +144,33 @@ img{
     flex-direction: column;
     align-items: center;
     gap: 10px;
-    background-color: red;
+    /* background-color: red; */
     width: calc(100% / 7);
     height: 100%;
 }
 
 .forecast-image{
     background-color: black;
-    width: 100px;
+    width: 90%;
+    height: 30%;
+}
+
+.forecast-image > img{
     height: 100px;
+    width: 100px;
+    z-index: 2;
 }
 
 .forecast-temperature{
     background-color: black;
-    width: 100px;
-    height: 100px;
+    width: 90%;
+    height: 30%;
 }
 
 .forecast-date{
     background-color: black;
-    width: 100px;
-    height: 100px;
+    width: 90%;
+    height: 30%;
 }
 
 input:focus{
