--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Staatliches&display=swap');
+
 *{
     margin: 0;
     padding: 0;
     overflow: hidden;
+    font-family: 'Staatliches', cursive;
 }
 
 body{
@@ -36,7 +39,7 @@ img{
 .today{
     grid-column: 1 / 3;
     grid-row: 0 / 1;
-    background: wheat;
+    background: black;
     margin: 20px;
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -50,7 +53,8 @@ img{
     /* width: 100%; */
     height: 100%;
     margin: 20px;
-    background-color: red;
+    background-color: black;
+    font-size: 10rem;
 }
 
 .today__city{
@@ -59,13 +63,16 @@ img{
     /* width: 80%; */
     /* height: 40%; */
     margin: 20px;
-    background-color: black
+    background-color: black;
+    font-size: 4rem;
+    letter-spacing: 4px;
+    line-height: 4.2rem;
 }
 
 .today__image{
     grid-column: 1 / 2;
     grid-row: 2 / 3;
-    background-color: pink;
+    background-color: black;
     /* width: 50%; */
     margin: 20px;
     display: flex;
@@ -79,23 +86,26 @@ img{
     z-index: 2;
 }
 
-
 .additional{
     grid-column: 3 / 5;
     grid-row: 0 / 1;
-    background: navy;
     display: flex;
     flex-direction: column;
     margin: 20px;
 }
 
-.additional__its-now{
+.additional__its-now, .additional__humidity, .additional__wind-speed{
     width: 100%;
     height: 33.33%;
-    background-color: red;
+    background-color: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 3rem;
+    text-align: center;
 }
 
-.additional__humidity{
+/* .additional__humidity{
     width: 100%;
     height: 33.33%;
     background-color: black;
@@ -104,8 +114,8 @@ img{
 .additional__wind-speed{
     width: 100%;
     height: 33.33%;
-    background-color: blanchedalmond;
-}
+    background-color: black;
+} */
 
 .search{
     display: flex;
@@ -149,10 +159,14 @@ img{
     height: 100%;
 }
 
-.forecast-image{
+.forecast-image, .forecast-date, .forecast-temperature{
     background-color: black;
-    width: 90%;
-    height: 30%;
+    width: 100%;
+    height: 33.33%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 2rem;
 }
 
 .forecast-image > img{
@@ -161,7 +175,7 @@ img{
     z-index: 2;
 }
 
-.forecast-temperature{
+/* .forecast-temperature{
     background-color: black;
     width: 90%;
     height: 30%;
@@ -171,7 +185,7 @@ img{
     background-color: black;
     width: 90%;
     height: 30%;
-}
+} */
 
 input:focus{
     outline: none;
