--- a/src/style.css
+++ b/src/style.css
@@ -5,6 +5,7 @@
     padding: 0;
     overflow: hidden;
     font-family: 'Staatliches', cursive;
+    user-select: none;
 }
 
 body{
@@ -14,7 +15,6 @@ body{
 }
 
 img{
-    /* position: absolute; */
     width: 1920px;
     height: 1080px;
     z-index: -1;
@@ -28,11 +28,8 @@ img{
     display: grid;
     grid-template-columns: repeat(5, 1fr);
     grid-template-rows: 1fr 1fr;
-    /* gap: 10px; */
-    flex-direction: column;
     background: rgba(0, 0, 0, 0.56);
     color: white;
-    /* opacity: 0.7; */
     border-radius: 40px;
 }
 
@@ -42,26 +39,24 @@ img{
     background: black;
     margin: 20px;
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr;
     gap: 20px;
 }
 
 .today__temperature{
-    grid-column: 1 / 3;
+    grid-column: 1 / 4;
     grid-row: 1 / 2;
-    /* width: 100%; */
     height: 100%;
     margin: 20px;
     background-color: black;
     font-size: 10rem;
+    text-align: center;
 }
 
 .today__city{
-    grid-column: 2 / 3;
+    grid-column: 2 / 4;
     grid-row: 2 / 3;
-    /* width: 80%; */
-    /* height: 40%; */
     margin: 20px;
     background-color: black;
     font-size: 4rem;
@@ -73,7 +68,6 @@ img{
     grid-column: 1 / 2;
     grid-row: 2 / 3;
     background-color: black;
-    /* width: 50%; */
     margin: 20px;
     display: flex;
     justify-content: center;
@@ -81,8 +75,8 @@ img{
 }
 
 .today__image > img{
-    width: 100px;
-    height: 100px;
+    width: 150px;
+    height: 150px;
     z-index: 2;
 }
 
@@ -94,7 +88,7 @@ img{
     margin: 20px;
 }
 
-.additional__its-now, .additional__humidity, .additional__wind-speed{
+.additional__description, .additional__humidity, .additional__wind-speed{
     width: 100%;
     height: 33.33%;
     background-color: black;
@@ -105,39 +99,26 @@ img{
     text-align: center;
 }
 
-/* .additional__humidity{
-    width: 100%;
-    height: 33.33%;
-    background-color: black;
-}
-
-.additional__wind-speed{
-    width: 100%;
-    height: 33.33%;
-    background-color: black;
-} */
-
 .search{
     display: flex;
     flex-direction: column;
     grid-column: 5 / 6;
     grid-row: 0 / 1;
     margin: 20px;
-    background-color: navajowhite;
+    background-color: black;
 }
 
-.search > p{
+.search__text, .search__toggle, .search > input{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 3rem;
     height: 33.33%;
+    text-align: center;
 }
 
-.search > input{
-    height: 33.33%;
-}
-
-.toggle-temp{
-    width: 100%;
-    height: 100%;
-    background-color: violet;
+input{
+    user-select:auto;
 }
 
 .forecast{
@@ -154,7 +135,6 @@ img{
     flex-direction: column;
     align-items: center;
     gap: 10px;
-    /* background-color: red; */
     width: calc(100% / 7);
     height: 100%;
 }
@@ -175,18 +155,77 @@ img{
     z-index: 2;
 }
 
-/* .forecast-temperature{
-    background-color: black;
-    width: 90%;
-    height: 30%;
-}
-
-.forecast-date{
-    background-color: black;
-    width: 90%;
-    height: 30%;
-} */
-
 input:focus{
     outline: none;
+}
+
+@media only screen and (max-width: 600px) {
+    .weather{
+        display: flex;
+        flex-direction: column;
+        /* height: 100vh; */
+        overflow: auto;
+    }
+
+    .today{
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+        gap: 0;
+    }
+
+    .today__temperature{
+        white-space: nowrap;
+        grid-column: 1 / 2;
+        grid-row: 1 / 2;
+    }
+
+    .today__image{
+        grid-column: 2 / 4;
+        grid-row: 1 / 2;
+        background: none;
+        display: flex;
+        justify-content: flex-end;
+        align-items: flex-start;
+    }
+
+    .today__image > img{
+        width: 100px;
+        height: 100px;
+    }
+
+    .today__city{
+        grid-column: 1 / 4;
+        grid-row: 2 / 3;
+        white-space: nowrap;
+        overflow-x: auto;
+    }
+    
+    .today__city, .today__image, .today__temperature{
+        display: flex;
+        margin: auto;
+        height: auto;
+        font-size: 4rem;
+    }
+
+    .additional{
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        height: auto;
+        margin: auto;
+    }
+
+    .search{
+        gap: 20px;
+    }
+
+    /* .forecast{
+        display: block;
+        
+    }
+    
+    .forecast__card{
+        width: auto;
+    } */
 }
