Add class to hide the weather div while loading

--- a/src/style.css
+++ b/src/style.css
@@ -33,6 +33,10 @@ img{
     border-radius: 40px;
 }
 
+.weather-hidden{
+    display: none;
+}
+
 .today{
     grid-column: 1 / 3;
     grid-row: 0 / 1;
